Добавлены новые шрифты, исправления недоработок

--- a/data/static/css/style.css
+++ b/data/static/css/style.css
@@ -1,3 +1,54 @@
 a {
   text-decoration: none !important;
 }
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+html *:not(h1, h2, h3, h4) {
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.star {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+}
+
+#stars-container {
+  position: relative;
+  top: -10px;
+  margin-left: 6px;
+}
+
+#program-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.program-icon {
+  align-self: flex-start;
+  margin-right: 10px;
+}
+
+.d-flex.align-items-center {
+  display: flex;
+  align-items: center;
+}
+
+.warning {
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #ffc10733;
+  border: 1px solid #ffc107;
+  border-radius: 5px;
+}
