--- a/data/static/css/style.css
+++ b/data/static/css/style.css
@@ -56,3 +56,12 @@ html *:not(h1, h2, h3, h4) {
   border: 1px solid #ffc107;
   border-radius: 5px;
 }
+
+
+.info {
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #5107ff33;
+  border: 1px solid #2c07ff;
+  border-radius: 5px;
+}
